# MyTinnyRender

./: CMakeLists.txt  LICENSE  main.cpp
tga/: tgaimage.cpp  tgaimage.h
